# bias-internal-representation

./: README.md  main.py  main_transformers.py  main_vllm.py  pyproject.toml
constants/: constants.py  models.py
data/: average_ranks_by_field.csv  effect_sizes_negative.csv  effect_sizes_positive.csv  per_model_primary_table.csv  per_model_secondary_table.csv  prompt_field_similarity__01-ai_Yi-1.5-34B-Chat__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__Qwen_Qwen3-235B-A22B-Instruct-2507-FP8__maxlen200__tp2__gmu0.90.csv  prompt_field_similarity__Qwen_Qwen3-32B__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__Qwen_Qwen3-Next-80B-A3B-Instruct__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__deepseek-ai_DeepSeek-R1-Distill-Qwen-32B__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__dphn_dolphin-2.9.1-yi-1.5-34b__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__google_gemma-3-27b-it__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__meta-llama_Llama-3.3-70B-Instruct__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__mistralai_Mixtral-8x22B-Instruct-v0.1__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__mistralai_Mixtral-8x7B-Instruct-v0.1__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__openai_gpt-oss-120b__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__openai_gpt-oss-20b__pool_mean__maxlen200__bs32.csv  tukey_posthoc_negative.csv  tukey_posthoc_positive.csv
data/archived/: per_model_primary_table.csv  per_model_secondary_table.csv  prompt_field_similarity__01-ai_Yi-1.5-34B-Chat__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__Qwen_Qwen3-32B__pool_mean__maxlen200__bs32.csv  prompt_field_similarity__Qwen_Qwen3-Next-80B-A3B-Instruct__pool_mean__maxlen200__bs32.csv  (+9 more)
jobs/: exp4job_final_models_list_verbose.sh
scripts/: calc_avg_ranks.py  calc_field_similarity_ci.py  calc_paired_ttest_ranks.py  calc_welch_ranks.py  calculate_significance_sim.py  exp4_stats.py
t5-env/: pyproject.toml
t5-env/constants/: __init__.py  (+1 more)
vllm-env/: main_vllm.py  pyproject.toml
vllm-env/constants/: constants.py
(+14 files in other folders)
