[project]
name = "exp4-mistral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "kernels>=0.11.5",
    "mistral-common[sentencepiece]>=1.8.6",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "statsmodels>=0.14.6",
    "torchao>=0.15.0",
    "transformers>=4.57.3",
    "triton>=3.5.0",
]
