[project]
name = "vllm-env"
version = "0.1.0"
dependencies = [
    "vllm>=0.6.0",
    "transformers>=4.30.0,<5.0.0",
    "accelerate>=1.12.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "mistral-common[sentencepiece]>=1.8.6",
]
requires-python = ">=3.12"

[tool.uv]
# This ensures it doesn't try to inherit the git source for transformers
override-dependencies = ["transformers<5.0.0"]
